@@ -73,7 +73,7 @@ public enum ErrorEnum {
 			-832000), CAT_NAME_EXISTS_AS_COLLECTION(-833000), CAT_NAME_EXISTS_AS_DATAOBJ(
 			-834000), CAT_RESOURCE_NOT_EMPTY(-835000), CAT_NOT_A_DATAOBJ_AND_NOT_A_COLLECTION(
 			-836000), CAT_RECURSIVE_MOVE(-837000), CAT_LAST_REPLICA(-838000), CAT_OCI_ERROR(
-			-839000), CAT_PASSWORD_EXPIRED(-840000), CAT_HOSTNAME_INVALID(
+			-839000), CAT_PASSWORD_EXPIRED(-840000), SPECIFIC_QUERY_EXCEPTION(-853000),CAT_HOSTNAME_INVALID(
 			-855000), CAT_TICKET_INVALID(-890000), FILE_OPEN_ERR(-900000), FILE_READ_ERR(
 			-901000), FILE_WRITE_ERR(-902000), PASSWORD_EXCEEDS_MAX_SIZE(
 			-903000), ENVIRONMENT_VAR_HOME_NOT_DEFINED(-904000), UNABLE_TO_STAT_FILE(
@@ -471,6 +471,8 @@ public enum ErrorEnum {
 			return CAT_OCI_ERROR;
 		case -840000:
 			return CAT_PASSWORD_EXPIRED;
+		case -853000:
+			return SPECIFIC_QUERY_EXCEPTION;
 		case -890000:
 			return CAT_TICKET_INVALID;
 		case -900000:
